css/styles-body.css
/* ... */
    /* setting up grid area */
    #myPic {grid-area: myPic;}
    #mantra {grid-area: mantra;}
    #whyUX {grid-area: whyUX;}
    #influence {grid-area: influence;}
    .social {grid-area: social;}



/* sizing the illustration pics */
.illustration {
    display: inline-block;
    width: 50%;
    text-align: center;
    margin-bottom: 8px;
}
    /* breathing room after text blocks */
    .abBlocks { 
        margin-top: 0px;   
        margin-bottom: 32px; 
        display: inline-block;
    }

    /* include padding in max-width */
    /* .whyux {
        max-width: 33.333%;
        min-width: 300px;
        box-sizing: border-box; 
    }
      
    .influence {
        max-width: 33.333%;
        min-width: 300px;
        box-sizing: border-box; 
    }
      
    .mantra {
        max-width: 33.333%;
        min-width: 300px;
        box-sizing: border-box; 
    } */
/* Connect with me on Social network */

.social img {
    display: inline-block;
    width: 44px;
    margin: 0 8px 0 0;
}

/************ Footer Styles ************/
/* Setup footer box  */
footer {
    background-color: #023246;
    max-width: 100%;
    color: #F6F6F6;
    padding: 36px 8px;
}
.footText { font-size: 12px; font-weight: 300;}


/* ////////////////////////////////////////////////////////////////////////////////////////////// */


/******************* Responsive *******************/

/* setup for landscape mode and larger screen sizes */
@media screen and (min-width: 650px) {
    .heroText p {
        font-size: 16px;
        font-weight: 300;
        color: #023246;
        width: 90%;
    }
    /* HERO - Responsive *********************************************/
    .hero {
        grid-template-columns: 1fr 1fr 1fr 1fr;
        grid-template-rows: 1fr .05fr;
        grid-template-areas: 
        "heroText heroText heroIllustration heroIllustration"
        ". animatelogo animatelogo ."
       ;
       padding-top: 40px;
    }
    /* push hero image to the right */
    .heroIllustration {display: flex; justify-content: center}
    .heroIllustration img { margin-right: auto;}
    /* hide CTA under text block and show CTA under illustration */
    .heroText .buttonCTA { visibility: hidden;}
    .heroIllustration .buttonCTA { visibility: visible;}
    

    /* MY PROCESS - Responsive ***************************************/
    /* scale all illustrations */
    .myProcess img {
        width: 100%;
    }

    /* Readjusting grid for My Process Section */
    .processGrid {
        grid-template-columns: 0.5fr 0.75fr 1fr 0.75fr 0.5fr;
        grid-template-rows: 0.5fr 0.75fr 1fr 0.75fr 0.5fr;
        grid-template-areas: 
        "discover   line1   explainAB      line2       define"
        ".          .       .              line3       ."
        ".          .       explainBC      .           ."
        ".          line4      .             .       ."
        "develop    line5   explainCD      line6       deliver";
        width: 80%;
        margin: auto;
    }

    /* making adjustments for rectangular layout to show process diagnol lines correctly */
    .medScreenAdjust {
        grid-area: medScreenAdjust;}

    /* setup connecting lines */
    .line {
    width: 100%;
    height: 2px;
    background-color: #023246;
    display: inline-block;
    margin: auto auto;
    }

    #line3 {transform: rotate(-40deg); margin: auto auto;}
    #line4 {transform: rotate(-40deg); margin: auto auto;}
    

    /* Adjust portfolio section for landscape */
    /* Portfolio grid for entries */
    .portfolioGrid {
    display: grid;
    /*  Grid */
    grid-template-columns: 0.5fr 0.5fr 0.5fr 0.5fr;
    grid-template-rows: 1fr 1fr 1fr;
    grid-template-areas: 
    "wrcdvCover wrcdvCover wrcdvCover wrcdvChoice"
    "travelChoice travelCover travelCover travelCover"
    "goodEatsCover goodEatsCover goodEatsCover goodEatsChoice";
    margin-top: 64px;
    }
    /* make this text block stackable */
    #wrcdvChoice,
    #goodEatsChoice {
    display: block;
    margin-left: 40px;
    padding-top: 4rem;
    }

   .projectChoice,
   #travelChoice button {
        display: block;
        margin-left: auto;
    }
    /* fixing the spacing to the cover for the second entry */
    #travelChoice {padding-right: 40px;}

    .projectChoiceTitle { 
        /* make text block moveable */
        display: block;
    }
    .projectChoice button {
        background-color: #38C1F9;
        border-radius: 2px;
        padding: 12px 32px;
        color: #023246;
        font-weight: 500;
        font-size: 14px;
    }
}
@media screen and (min-width: 768px){
    #bar {
        height: 2.75rem;
    }
    .portfolio h3 { 
        display: inline;
        /* width: 75%; */
        padding-right: 28%;
    }

    /* about grid for entries */
    .aboutGrid {
    display: grid;
    /*  Grid 3x4*/
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: .25fr 1fr .25fr .5fr;
    grid-template-areas: 
    "aboutMeTitle   aboutMeTitle    aboutMeTitle"
    "myPic  whyUX   influence"
    "myPic  whyUX   influence"
    "social drawing drawing";
    margin-top: 64px;
    }
    /* setting up grid area */
    #myPic {grid-area: myPic;}
    #mantra {grid-area: mantra;}
    #whyUX {grid-area: whyUX; margin-left: 16px;}
    #influence {grid-area: influence; margin-left: 16px;}


}



/* setup for 1024 Desktop */
@media screen and (min-width: 1024px) {

    .heroText {
        /* use margin to kinda center text area */
        margin-top: 40px;
        margin-left: 40px;
        margin-right: 16px; 
        width: 80%;
    }
    .portfolio h3 { 
        display: inline;
        /* width: 75%; */
        padding-right: 47%;
    }

    #line3 {transform: rotate(-37deg); margin: auto auto;}
    #line4 {transform: rotate(-38deg); margin: auto auto;}
}
/* ... */

